--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Hello!</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300" >
+    <title>Sample site</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 
-  <div class="main">
-    <div class="content">
-      {{{body}}}
+<!-- Header -->
+<header id="header">
+    <div class="logo"><a href="#">Welcome to our site</a></div>
+</header>
+
+<section id="main">
+    <div class="inner">
+        {{{body}}}
     </div>
-  </div>
+</section>
+
+<!-- Scripts -->
+<script src="/js/jquery.min.js"></script>
+
 
 </body>
 </html>
